{
    "name": "ControllerActionInput",
    "maps": [
        {
            "name": "LeftController",
            "id": "ec83da1f-6659-4128-92f1-e51fb0a93c19",
            "actions": [
                {
                    "name": "PrimaryPressed",
                    "type": "Button",
                    "id": "fb13d6ec-a927-4025-852a-40290ae7fac2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouched",
                    "type": "Button",
                    "id": "8958d182-5e76-4399-8863-d964326019a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryPressed",
                    "type": "Button",
                    "id": "105c9ba4-407b-4afa-b153-583c479019c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryTouched",
                    "type": "Button",
                    "id": "47014955-4312-4d83-a7df-b92da665f4e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickPressed",
                    "type": "Button",
                    "id": "9ab74433-dd17-45ce-8850-8030781f778a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickTouched",
                    "type": "Button",
                    "id": "066f1a2b-8f52-4890-bb12-52a6762542b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "0d39d045-3e3c-4d08-a130-790d9698ceaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerTouched",
                    "type": "Button",
                    "id": "21e73727-ca82-4486-a54a-ef9d9ce0f48d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "86be4442-92ab-48f9-9eef-febab4580851",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripTouched",
                    "type": "Button",
                    "id": "da91ef4a-a82c-493d-86b0-a0ad1ca2c084",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuPressed",
                    "type": "Button",
                    "id": "b7bb9959-7c84-4228-8ff2-6dc024c7a75a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cbb4f38a-0c16-4eea-af73-21f6598e927e",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aa2eeb6-e47d-42ed-adfa-346f7528e89d",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68787e91-b4e7-4de6-8da7-b566e11f87c5",
                    "path": "<XRController>{LeftHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57cfaf96-86b9-43cd-99ac-1bc1b0253b53",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d370d15-e528-415f-8f86-c42a7b3b200a",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae8636dd-f6fa-485f-82ea-b393939ec675",
                    "path": "<XRController>{LeftHand}/primaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c0e871b-5f85-4e0d-9c26-03cc16398e04",
                    "path": "<XRController>{LeftHand}/secondaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "850326b0-039f-4298-b72c-bcfc2778871b",
                    "path": "<XRController>{LeftHand}/thumbstickTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "becff818-8dd9-4296-9338-1507ce867a0d",
                    "path": "<XRController>{LeftHand}/triggerTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eabd8a0b-e90e-4115-bf88-d017b74f95b4",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b456e84-db72-4a7b-8edf-d9cd4e5e8373",
                    "path": "<XRController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RightController",
            "id": "21e2b54d-f53e-4db2-b1c8-d3e5e83f1028",
            "actions": [
                {
                    "name": "PrimaryPressed",
                    "type": "Button",
                    "id": "04ea61b1-2df0-466d-9c94-3b34eebf967f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouched",
                    "type": "Button",
                    "id": "c1666248-50fd-472d-b411-4d254169b859",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryPressed",
                    "type": "Button",
                    "id": "925b3f65-fc8a-4ff7-b98d-2bb7e5d4175c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryTouched",
                    "type": "Button",
                    "id": "caf1cc5f-d4fc-4239-9c84-e1b59f8111bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickPressed",
                    "type": "Button",
                    "id": "a266c123-d594-45ec-9086-03a360ae1780",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickTouched",
                    "type": "Button",
                    "id": "dc9e61e6-b2ca-4381-aefc-28885fa4ab3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "fc6da54e-93bd-400c-80f0-f814598eeb1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerTouched",
                    "type": "Button",
                    "id": "2bce6150-7350-420b-8cdd-bbddd57414f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "863cef1b-fc64-4a41-acf4-906c576c2fc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripTouched",
                    "type": "Button",
                    "id": "506eb267-3ee8-48c4-9fcc-5ac91d133015",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuPressed",
                    "type": "Button",
                    "id": "00a479a9-baf9-482d-ac2a-62c147e83475",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Thumbstick",
                    "type": "Value",
                    "id": "652310ac-ea6b-48e2-8d9a-8cf797d06a08",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d56a5dde-0144-4ebb-bb42-aafeee352498",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad28d0c9-dfcf-49b5-9a02-01a82ba52dd1",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abb5ad05-166a-451e-aff3-1592da743397",
                    "path": "<XRController>{RightHand}/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ce81660-c567-4284-8eff-78abe24aab0e",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5bcf84c-d0b5-455a-88e2-e3617e4c5b40",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca9cbda7-943b-4ca7-a814-eb259c5398cd",
                    "path": "<XRController>{RightHand}/primaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2ff5372-5d2e-4d06-aa50-8bcdd728bb9f",
                    "path": "<XRController>{RightHand}/secondaryTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a65f683-3f1f-4bc3-8e03-a359420ba0fe",
                    "path": "<XRController>{RightHand}/thumbstickTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a113a4ff-ea44-45ea-ac1f-2d85db37147e",
                    "path": "<XRController>{RightHand}/triggerTouched",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc905838-2332-434e-9caf-24c7ffb60796",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripTouched",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34580472-3fdd-4b54-92d9-b322a6b9db89",
                    "path": "<XRController>{RightHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f00b0d7-39e8-48dd-a97c-06af2dab0429",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thumbstick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "66523a83-42e5-4b6b-901e-e57b28b5e91d",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thumbstick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "af9b6b33-8dbb-4fe3-9c23-a2711dc977f2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thumbstick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0c4fb84c-852a-4fa9-8d32-776b0afe8ee2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thumbstick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d5e4d68c-cd98-4455-807d-37db50c18c0e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thumbstick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "04806936-ec7b-4d4c-a1c6-cb5dad81748c",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thumbstick",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}